Fix: Link icons alignment; they no longer go outside the header box

--- a/style.css
+++ b/style.css
@@ -57,7 +57,7 @@ body {
     padding: 30px;
     align-items: center;
     gap: 20px;
-    flex-wrap: nowrap;
+    flex-wrap: wrap;
     margin-top: 30px;
     border: 5px solid rgb(32, 226, 200);
     border-radius: 10px;
@@ -105,6 +105,7 @@ body {
     margin-top: 10px;
     width: 30%;
     justify-content: center;
+    flex-wrap: wrap;
 }
 
 .linksicons {
